# vite-plugin-tauri

./: .gitignore  .prettierrc  .prettierrc.json  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: check-test-release.yml  ci.yml  release.yml  test.yml
example/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.tauri.js  vite.config.tauri.ts
example/src/: App.vue  style.css
example/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src/components/: HelloWorld.vue
src/: build.ts  config.ts  dev.ts  index.ts  init.ts  logger.ts  tauri-cli.ts  utils.ts  vite-tauri.ts
